--- a/src/components/Intro.astro
+++ b/src/components/Intro.astro
@@ -1,6 +1,7 @@
 ---
 import portrait from "/main-portrait.jpg";
 import paint from "/paint.png";
+import sultan from "/sultan.png";
 ---
 
 <div
@@ -77,7 +78,7 @@ import paint from "/paint.png";
   <div class="relative">
     <img class="h-full" src={portrait} alt="Hua's portrait" />
     <div id="paint" class="absolute bottom-0 right-0 translate-y-1/4">
-      <img src={paint} alt="paint" />
+      <img src={sultan} alt="paint" />
     </div>
   </div>
 </div>
