--- a/src/components/Intro.astro
+++ b/src/components/Intro.astro
@@ -1,7 +1,7 @@
 ---
 import portrait from "/main-portrait.jpg";
 import paint from "/paint.png";
-import sultan from "/sultan.png";
+import sultan from "/sultan.jpg";
 ---
 
 <div
@@ -76,9 +76,9 @@ import sultan from "/sultan.png";
   </div>
 
   <div class="relative">
-    <img class="h-full" src={portrait} alt="Hua's portrait" />
+    <img class="h-full" src={sultan} alt="Hua's portrait" />
     <div id="paint" class="absolute bottom-0 right-0 translate-y-1/4">
-      <img src={sultan} alt="paint" />
+      <img src={paint} alt="paint" />
     </div>
   </div>
 </div>
