--- a/src/components/Gallery.astro
+++ b/src/components/Gallery.astro
@@ -45,7 +45,7 @@ import GCP from "/Qwiklabs.jpg";
       <img
         class="relative z-10 w-full rounded-lg transition-all group-hover:-translate-x-3"
         src={GCP}
-        alt="painting"
+        alt="GFG Profile"
       />
       <div
         class="absolute left-0 top-0 h-full w-full rounded-lg bg-black transition-all group-hover:translate-x-4 group-hover:translate-y-4"
